--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 
 	<build>
 
+		<finalName>respectconnectbuilder</finalName>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
